# 3DRoomSurveillance

./: CMakeLists.txt  README.md  final01.cpp  kinect.cpp  kinect.hpp  main.cpp  resource.h  transformation_helpers.h  util.h
interface/NavigationDrawer-master/: NavigationDrawerPopUpMenu2.sln
interface/NavigationDrawer-master/NavigationDrawerPopUpMenu2/: App.config  App.xaml  MainWindow.xaml  MainWindow.xaml.cs  NavigationDrawerPopUpMenu2.csproj  UserControlCreate.xaml  UserControlCreate.xaml.cs  UserControlHome.xaml  UserControlHome.xaml.cs  Videos.cs  login.xaml  login.xaml.cs  packages.config
interface/WpfApp2/: WpfApp2.sln
interface/WpfApp2/WpfApp2/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  WpfApp2.csproj  login.xaml  login.xaml.cs
pointClouds/: pc11.ply  pc15.ply  pc3.ply  pc4.ply
src/: CMakeLists.txt  kinect.cpp  surfaceMatching.cpp
src/Open3D/: CMakeLists.txt  main.cpp  pointcloudMatching.cpp
src/deprecated/: capturePLY.cpp  kinect.cpp  kinect.h  main.cpp  recording.cpp  transformation_helpers.cpp
timercpp-master/: timercpp.h
